inline/pywai-inline-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pywai-inline-deployment
spec:
  selector:
    matchLabels:
      app: pywai-inline-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: pywai-inline-deployment
    spec:
      containers:
      - name: python
        image: python:3
        command:
        - /bin/sh
        - "-c"
        - |
          [...]
        ports:
        - name: http
          containerPort: 8000
