inline/pywai-inline-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pywai-inline-service
  labels: 
    myname : fred
spec:
  selector:
    app: pywai-inline-deployment
  type: NodePort
#  type: LoadBalancer
#  externalTrafficPolicy: Local
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: external-pywai-inline-service
  namespace: default
spec:
  externalName: 192.168.196.0
  type: ExternalName
  ports:
    - port: 80
