inline/test-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-pywai-inline-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: myserver.inline.traefik1.sysnetinc.com
      http:
        paths:
          - path: /
            backend: 
              serviceName: external-pywai-inline-service
              servicePort: 80
